Добавил выбор шрифта, а так же допилил отправку формы в тг

--- a/src/components/TextEdit/TextEdit.module.scss
+++ b/src/components/TextEdit/TextEdit.module.scss
@@ -8,3 +8,12 @@
 .textAddButton{
   width: 100%;
 }
+
+.fontSelect{
+  width: 100%;
+  height: 30px;
+  background: var(--primary-bg-color);
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
