--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,5 +1,6 @@
 @import 'clear';
 @import 'variables';
+@import 'fonts';
 
 body {
     min-width: 320px;
@@ -40,7 +41,7 @@ body {
 
     &__download-btn {
         display: flex;
-        width: 200px;
+        width: 170px;
         cursor: pointer;
         opacity: 0.9;
         background: green;
@@ -53,7 +54,7 @@ body {
         text-transform: uppercase;
         text-decoration: none;
         align-items: center;
-        justify-content: center;
+        justify-content: left;
         margin-top: 20px;
 
         &:hover {
@@ -76,6 +77,7 @@ body {
         display: flex;
         width: 200px;
         opacity: 0.9;
+        width: 170px;
         cursor: pointer;
         background: #141616;
         border: none;
@@ -87,7 +89,7 @@ body {
         text-transform: uppercase;
         text-decoration: none;
         align-items: center;
-        justify-content: center;
+        justify-content: left;
         margin-top: 20px;
 
         &:hover {
@@ -157,7 +159,11 @@ body {
     height: 500px !important;
 
     canvas {
-        width: 350px !important;
-        height: 500px !important;
+        //width: 350px !important;
+        //height: 500px !important;
     }
+}
+.sidebar-button-wrapper{
+    display: flex;
+    gap: 5px;
 }
