--- a/src/assets/_fonts.scss
+++ b/src/assets/_fonts.scss
@@ -1,20 +1,24 @@
 @font-face {
   font-family: Cancellaresca;
-  src: url('fonts/Cancellaresca.ttf');
+  src: url('./fonts/Cancellaresca.ttf');
 }
+
 @font-face {
   font-family: CaslonBecker;
-  src: url('fonts/CaslonBecker.ttf');
+  src: url('./fonts/CaslonBecker.ttf');
 }
+
 @font-face {
   font-family: GoodVibesPro;
-  src: url('fonts/GoodVibesPro.ttf');
+  src: url('./fonts/GoodVibesPro.ttf');
 }
+
 @font-face {
   font-family: MiamaNueva;
-  src: url('fonts/MiamaNueva.ttf');
+  src: url('./fonts/MiamaNueva.ttf');
 }
+
 @font-face {
   font-family: SnellRoundhand;
-  src: url('fonts/SnellRoundhand.ttf');
+  src: url('./fonts/SnellRoundhand.ttf');
 }
