--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -8,18 +8,18 @@ body {
 }
 
 .App {
-    max-width: 1200px;
-    margin: 0 auto;
+    @media (max-width: 980px) {
+        height: 100%;
+    }
 }
 
 .b-constructor {
     display: flex;
 
-    @media (max-width: 980px){
+    @media (max-width: 980px) {
         flex-direction: column;
+        height: 100%;
     }
-
-    min-height: 100vh;
 
     &__left-sidebar {
         background: var(--primary-bg-color);
@@ -27,8 +27,36 @@ body {
         width: 250px;
         padding: 10px;
 
-        @media (max-width: 980px){
+        @media (max-width: 980px) {
             width: 100%;
+            display: none;
+            position: fixed;
+            top: 0;
+            z-index: 60;
+            left: 0;
+            min-height: 100vh;
+            padding-top: 50px;
+
+            &--toggle {
+                display: block;
+            }
+        }
+
+        &-close-btn {
+            display: none;
+            font-size: 31px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+
+            svg {
+                width: 30px;
+                height: 30px;
+            }
+
+            @media (max-width: 920px) {
+                display: block;
+            }
         }
 
 
@@ -36,6 +64,30 @@ body {
             font-size: var(--sidebar-title-font-size);
             color: var(--sidebar-title-font-color);
             margin-bottom: var(--sidebar-title-mb);
+        }
+    }
+
+    &__left-sidebar-toggler {
+        display: none;
+        align-items: center;
+        background: #118511;
+        justify-content: center;
+        border: none;
+        border-radius: 5px;
+        width: 32px;
+        height: 164px;
+        color: #fff;
+        position: fixed;
+        top: 50%;
+        font-size: 13px;
+        left: 8px;
+        margin-top: -137px;
+        z-index: 60;
+        writing-mode: vertical-rl;
+        box-shadow: 1px 1px 10px #939191;
+
+        @media (max-width: 980px) {
+            display: flex;
         }
     }
 
@@ -56,6 +108,12 @@ body {
         align-items: center;
         justify-content: left;
         margin-top: 20px;
+
+        @media (max-width: 768px) {
+            font-size: 12px;
+            width: 50%;
+            justify-content: center;
+        }
 
         &:hover {
             opacity: 1;
@@ -92,6 +150,12 @@ body {
         justify-content: left;
         margin-top: 20px;
 
+        @media (max-width: 768px) {
+            font-size: 12px;
+            width: 50%;
+            justify-content: center;
+        }
+
         &:hover {
             opacity: 1;
         }
@@ -114,8 +178,9 @@ body {
         width: 350px;
         padding: 10px;
 
-        @media (max-width: 980px){
+        @media (max-width: 980px) {
             width: 100%;
+            z-index: 55;
         }
 
         h2 {
@@ -128,7 +193,7 @@ body {
             position: sticky;
             top: 10px;
 
-            @media (max-width: 980px){
+            @media (max-width: 980px) {
                 position: static;
             }
 
@@ -146,10 +211,16 @@ body {
         flex-grow: 1;
         height: 300px;
 
-        @media (max-width: 980px){
+
+        @media (max-width: 980px) {
             position: relative !important;
+            padding-top: 0;
             height: auto;
             order: -1;
+            display: flex;
+            margin-bottom: 20px;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
@@ -158,12 +229,18 @@ body {
     width: 350px !important;
     height: 500px !important;
 
+    @media (max-width: 768px) {
+        width: 350px !important;
+        height: 500px !important;
+    }
+
     canvas {
         //width: 350px !important;
         //height: 500px !important;
     }
 }
-.sidebar-button-wrapper{
+
+.sidebar-button-wrapper {
     display: flex;
     gap: 5px;
 }
